# research-agent

./: .env.example  .gitignore  README.md  agent.py  config.py  docker-compose.yml  download.py  downloader.py  ingestion_verification.py  kg_main.py  main.py  manual_ingestion.py  prompt_template.py  prompts.json  pyproject.toml  query_builder.py
dockerfiles/qdrant/: production.yaml
kg/: __init__.py  embedder.py  graph_builder.py  graph_search.py  knowledge_agent.py  neo4j_manager.py  qdrant_manager.py  text_extractor.py
sources/: __init__.py  base.py  crossref.py  medium.py  semantic_scholar.py  slideshare.py
