[project]
name = "research-agent"
version = "0.1.0"
description = "Manufacturing-focused academic research agent for IEEE, ScienceDirect, Taylor & Francis, MDPI, and Medium"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.1",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.1",
    # Knowledge graph + vector search
    "neo4j>=5.20.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "pdfplumber>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
]

[tool.hatch.build.targets.wheel]
packages = ["sources", "kg"]
